# aiofutures

./: .gitignore  .python-version  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: cicd.yml
aiofutures/: __init__.py  exceptions.py  executor.py
tests/: conftest.py  helpers.py  test_executor.py
