[tool.poetry]
name = "aiofutures"
version = "0.1.0"
description = "Smoothly migrate your synchronous codebase to an asynchronous style."
authors = ["Denis Kazakov <denis@kazakov.ru.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"
flake8 = "^5"
isort = "^5.11"
mypy = "^1.1.1"
pyproject-flake8 = "^5"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.7"
warn_unused_configs = true
files = ["aiofutures"]
