[tool.poetry]
name = "aiofutures"
version = "0.1.3"
description = "Smoothly migrate your synchronous codebase to the asynchronous style."
authors = ["Denis Kazakov <denis@kazakov.ru.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/aiofutures"
repository = "https://github.com/KazakovDenis/aiofutures"
keywords = ["asyncio", "executor", "concurrent", "futures"]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.8.1"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "*"}
flake8 = "*"
isort = "*"
mypy = "*"
pyproject-flake8 = ">=7"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
command_line = "-m pytest"
source = ["aiofutures"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
sort = "Stmts"
omit = ["*/tests/*"]

[tool.flake8]
max-line-length = 120
max-complexity = 10
exclude = [
    ".git",
    ".idea",
    ".pytest_cache",
    ".mypy_cache",
    "__pycache__"
]
max-cognitive-complexity = 10
min-python-version = 3.8
per-file-ignores = [
    "aiofutures/__init__.py:F401"
]
pytest-fixture-no-parentheses = true
pytest-parametrize-names-type = "csv"


[tool.isort]
multi_line_output = 3
lines_after_imports = 2
lines_between_sections = 1
line_length = 120
use_parentheses = true
include_trailing_comma = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["aiofutures", "tests"]

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
files = ["aiofutures"]
